--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-<<<<<<< HEAD
   "name": "horizontal-slider",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "react-transition-group": "1.x"
-=======
-  "name": "img-slider",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
->>>>>>> 5d7641054a72c34e1734d55b61f14ba3c2fe740a
   },
+  "homepage": "https://avemike.github.io/ImgSliderv01/",
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
